--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -22,5 +22,9 @@ steps:
       - 'managed'
       - '--allow-unauthenticated'
 
+# 🔑 ここが今回のエラーを解決するポイントです
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 images:
   - 'asia-northeast1-docker.pkg.dev/szlife-system-admin/admin-manager-repo/frontend-image'
