--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lucide-react": "^0.564.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
